--- a/source/homepage/homepage.html
+++ b/source/homepage/homepage.html
@@ -146,7 +146,9 @@
 
             <!--Holds the past week view-->
             <section class="past-week-wrap">
-              <div class="past-week-grid">
+              <table class="table-week" data-lang="en"> </table>
+              <!-- <div class="past-week-grid">
+
                 <div class="past-day">f</div>
                 <div class="past-day">f</div>
                 <div class="past-day">f</div>
@@ -154,7 +156,7 @@
                 <div class="past-day">f</div>
                 <div class="past-day">f</div>
                 <div class="past-day">f</div>
-              </div>
+              </div> -->
             </section>
           </div>
           
