Added week calendar at bottom of homepage

--- a/source/homepage/homepage.html
+++ b/source/homepage/homepage.html
@@ -146,7 +146,7 @@
 
             <!--Holds the past week view-->
             <section class="past-week-wrap">
-              <table class="table-week" data-lang="en"> </table>
+              <table class="table-week" id="week-calendar" data-lang="en"> </table>
               <!-- <div class="past-week-grid">
 
                 <div class="past-day">f</div>
