Added js to header

--- a/source/homepage/homepage.html
+++ b/source/homepage/homepage.html
@@ -35,7 +35,7 @@
                   <img src="../icons/left-icon.png" alt="Home">
                 </button>
                 <!-- <div class="date-header-text" id="current-date"></div> -->
-                <div class="date-header-text" >Wednesday September 28, 2024</div>
+                <div class="date-header-text" id="date-header"> </div>
                 <button onclick="changeDate(1)">
                   <img src="../icons/right-icon.png" alt="Home">
                 </button>
@@ -147,16 +147,6 @@
             <!--Holds the past week view-->
             <section class="past-week-wrap">
               <table class="table-week" id="week-calendar" data-lang="en"> </table>
-              <!-- <div class="past-week-grid">
-
-                <div class="past-day">f</div>
-                <div class="past-day">f</div>
-                <div class="past-day">f</div>
-                <div class="past-day">f</div>
-                <div class="past-day">f</div>
-                <div class="past-day">f</div>
-                <div class="past-day">f</div>
-              </div> -->
             </section>
           </div>
           
