Added tests for puppeteer
added test for resizing, adding task, and working on changing the month

--- a/source/calendar/calendar.html
+++ b/source/calendar/calendar.html
@@ -38,9 +38,9 @@
           <div class="date-header-wrap">
             <div class="date-header">
               <div class="date-header-buttons">
-                <button class="prev-date-btn"></button>
-                <button class="next-date-btn"></button>
-              </div>
+                <button id="btn#1" class="prev-date-btn"></button>
+                <button id="btn#2" class="next-date-btn"></button>
+              </div> 
 
               <!-- Calendar header and date jump -->
               <div class="jump-header">
